# SBEPIS

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  SBEPIS.sln  SBEPIS.sln.DotSettings  build.rs  gitsync.conf  global.json  ignore.conf
.github/: FUNDING.yml
Assets/: GameManager.cs  InitTestScene638170099676682250.unity  InitTestScene638173498014114226.unity  InitTestScene638173510663834136.unity  InitTestScene638196768734310878.unity  InitTestScene638196923650316304.unity  InitTestScene638218237364502990.unity  New Controls.inputactions  UniversalRenderPipelineAsset.asset  bits.gv  bits.txt  polygraph.db
Assets/Alchemy/: Item.cs  Itemkind.cs  Perfectly Unique Object.asset  Perfectly Unique Object.prefab
Assets/Animations/: Alchemiter Dec Button.anim  Alchemiter Inc Button.anim  Alchemiter.controller  Alchemize.anim  Lathe Card 1 Adopted.anim  Lathe Card 1 Adoption.anim  Lathe Card 2 Adoption.anim  Lathe Lever 1 Is Pulled.anim  Lathe Lever 1 Pulled 2 Pulled.anim  Lathe Lever 1 Pulled.anim  Lathe Lever 1 Pushed.anim  Lathe Lever 2 Pulled.anim  Lathe Lever 2 Pushed.anim  Lathe Pistons On.anim  Lathe Pistons Turning Off.anim  Lathe Pistons Turning On.anim  Lathe.anim  Lathe.controller  Punch Designix.controller  Punch Green Light.anim  Punch Red Light.anim  Punch.anim  Punch.controller  Sample Abandon.anim  Sample Adopted.anim  Sample Adopting.anim  Sample Placement.controller  Sylladex Cartridge.anim  Sylladex Insert Deposit.anim  Sylladex Insert Withdraw.anim  Sylladex Litty.anim  Sylladex Littying.anim  Sylladex Not Littying.anim  Sylladex Retrieve Deposit.anim  Sylladex Retrieve Withdraw.anim  Sylladex Uncaptchaloguing.anim  (+7 more)
Dev Docs/: bits.json  force.js  index.html  rouxls.json
Item Bases/: Oboe.fbx
Item Components/: Horn Component.fbx
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
SBEPIS/: Prefabs.cs  Program.cs  SBEPIS.csproj
UIElementsSchema/: SBEPIS.Bits.xsd  SBEPIS.Utils.xsd  UIElements.xsd  UnityEditor.UIElements.xsd
docs/: bits-force.js  bits.css  bits.html  bits.json  index.html  style.css
src/: editor.rs  gravity.rs  input.rs  main.rs  main_bundles.rs  overview_camera.rs  player_commands.rs  skybox.rs  ui.rs  util.rs
(+3965 files in other folders)
