[package]
name = "sbepis-bevy"
version = "0.1.0"
edition = "2021"

[features]
debug = ["inspector", "overview_camera", "terminal"]
default = ["debug"]
inspector = ["dep:bevy-inspector-egui", "bevy_panorbit_camera?/bevy_egui"]
overview_camera = ["dep:bevy_panorbit_camera"]
spawn_debug_notes_on_staff = []
terminal = []

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0", features = ["wav", "mp3"] }
bevy-inspector-egui = { version = "0.21.0", optional = true }
bevy-trait-query = "0.4.0"
bevy_panorbit_camera = { version = "0.9.0", optional = true }
bevy_xpbd_3d = "0.3.1"
image = "0.24.7"
itertools = "0.11.0"
leafwing-input-manager = "0.11.1"
num-traits = "0.2.17"
winit = "0.29.3"

[build-dependencies]
winres = "0.1"
